Optimisation of finding concepts